--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - ./db/dumps:/app-db-dumps
     environment:
-      - POSTGRES_USER=sophia_bergamo  
-      - POSTGRES_PASSWORD=123
-      - POSTGRES_DB=instituto
+      - POSTGRES_USER=sophia
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_DB=test
 
   testdb:
     image: postgres:15.1
@@ -17,6 +17,6 @@ services:
     volumes:
       - ./db/dumps:/app-db-dumps
     environment:
-      - POSTGRES_USER=sophia_bergamo
-      - POSTGRES_PASSWORD=123
-      - POSTGRES_DB=instituto
+      - POSTGRES_USER=sophia
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_DB=test
