--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-<<<<<<< HEAD
-  "name": "instituto",
-  "version": "1.0.0",
-  "description": "PROJETO BACK-END INSTITUTO",
-  "main": "index.js",
-  "scripts": {
-    "compile": "tsc",
-    "start": "ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.7.4",
-    "graphql": "^16.6.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.3.1",
-    "ts-node": "^10.9.1",
-=======
-  "dependencies": {
-    "pg": "^8.11.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.16"
-  },
-  "devDependencies": {
-    "@types/node": "^20.3.1",
->>>>>>> 06c47c5 (connected-database)
-    "typescript": "^5.1.3"
-  }
+   "name": "user",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "type": "commonjs",
+   "devDependencies": {
+      "ts-node": "10.7.0",
+      "@types/node": "^16.11.10",
+      "typescript": "4.5.2"
+   },
+   "dependencies": {
+      "typeorm": "0.3.16",
+      "reflect-metadata": "^0.1.13",
+      "pg": "^8.4.0"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   }
 }
