--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
-    "compilerOptions": {
-      "rootDir": "src",
-      "outDir": "dist",
-      "lib": ["es6"],
-      "target": "es2016",
+   "compilerOptions": {
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "target": "es5",
       "module": "commonjs",
-      "esModuleInterop": true,
-      "strict": true,
-      "skipLibCheck": true
-    }, 
-    "exclude": ["node_modules"]
-  }
+      "moduleResolution": "node",
+      "outDir": "./build",
+      "rootDir": "./src",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "sourceMap": true
+   }
+}
