--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-   "name": "user",
    "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
+   "description": "PROJETO BACK-END INSTITUTO",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
-      "typescript": "4.5.2"
+      "ts-node": "10.7.0",
+      "typescript": "5.1.3"
    },
    "dependencies": {
-      "typeorm": "0.3.16",
+      "@apollo/server": "^4.7.1",
+      "graphql": "^16.6.0",
+      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0"
+      "typeorm": "0.3.16"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
