--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
+      "lib": ["es6"],
+      "target": "es2016",
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
       "rootDir": "./src",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
+      "sourceMap": true,
+      "strict": true,
+      "skipLibCheck": true
    }
 }
