--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
    "name": "instituto",
    "version": "1.0.0",
    "description": "PROJETO BACK-END INSTITUTO",
-   "main": "index.js",
+   "main": "index.ts",
    "scripts": {
-     "compile": "tsc",
-     "start": "ts-node src/index.ts"
+      "compile": "tsc",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
-     "@apollo/server": "^4.7.4",
-     "graphql": "^16.6.0",
-     "pg": "^8.4.0",
-     "reflect-metadata": "^0.1.13",
-     "typeorm": "0.3.16"
+      "@apollo/server": "^4.7.4",
+      "express": "^4.18.2",
+      "graphql": "^16.6.0",
+      "pg": "^8.11.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "^0.3.16"
    },
    "devDependencies": {
-     "@types/node": "^20.3.1",
-     "ts-node": "^10.9.1",
-     "typescript": "^5.1.3"
+      "@types/node": "^20.3.1",
+      "ts-node": "^10.9.1",
+      "typescript": "^5.1.3"
    }
- }
+}
