--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-   "version": "0.0.1",
+   "name": "instituto",
+   "version": "1.0.0",
    "description": "PROJETO BACK-END INSTITUTO",
-   "devDependencies": {
-      "@types/node": "^16.11.10",
-      "ts-node": "10.7.0",
-      "typescript": "5.1.3"
-   },
-   "dependencies": {
-      "@apollo/server": "^4.7.1",
-      "graphql": "^16.6.0",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.16"
-   },
+   "main": "index.js",
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+     "compile": "tsc",
+     "start": "ts-node src/index.ts"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+     "@apollo/server": "^4.7.4",
+     "graphql": "^16.6.0",
+     "pg": "^8.4.0",
+     "reflect-metadata": "^0.1.13",
+     "typeorm": "0.3.16"
+   },
+   "devDependencies": {
+     "@types/node": "^20.3.1",
+     "ts-node": "^10.9.1",
+     "typescript": "^5.1.3"
    }
-}
+ }
