--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "index.ts",
    "scripts": {
       "compile": "tsc",
-      "start": "ts-node src/index.ts",
+      "start": "npx ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "keywords": [],
