--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
+      "rootDir": "./src",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
