--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    "license": "ISC",
    "dependencies": {
       "@apollo/server": "^4.7.4",
+      "bcrypt": "^5.1.0",
       "express": "^4.18.2",
       "graphql": "^16.6.0",
       "pg": "^8.11.0",
@@ -19,6 +20,7 @@
       "typeorm": "^0.3.16"
    },
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/node": "^20.3.1",
       "ts-node": "^10.9.1",
       "typescript": "^5.1.3"
