--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-   "name": "instituto",
-   "version": "1.0.0",
-   "description": "PROJETO BACK-END INSTITUTO",
-   "main": "index.ts",
-   "scripts": {
-      "compile": "tsc",
-      "start": "npx ts-node src/index.ts",
-      "dev": "tsnd --exit-child /src/index.ts",
-      "test": "mocha"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "@apollo/server": "^4.7.4",
-      "axios": "^1.4.0",
-      "bcrypt": "^5.1.0",
-      "chai": "^4.3.7",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "graphql": "^16.6.0",
-      "pg": "^8.11.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "^0.3.16"
-   },
-   "devDependencies": {
-      "@types/bcrypt": "^5.0.0",
-      "@types/chai": "^4.3.5",
-      "@types/mocha": "^10.0.1",
-      "@types/node": "^20.3.1",
-      "mocha": "^10.2.0",
-      "ts-node": "^10.9.1",
-      "typescript": "^5.1.3"
-   }
+      "name": "instituto",
+      "version": "1.0.0",
+      "description": "PROJETO BACK-END INSTITUTO",
+      "main": "index.ts",
+      "scripts": {
+            "compile": "tsc",
+            "start": "npx ts-node src/index.ts",
+            "test": "npm run test"
+      },
+      "keywords": [],
+      "author": "",
+      "license": "ISC",
+      "dependencies": {
+            "@apollo/server": "^4.7.4",
+            "axios": "^1.4.0",
+            "bcrypt": "^5.1.0",
+            "chai": "^4.3.7",
+            "dotenv": "^16.3.1",
+            "express": "^4.18.2",
+            "graphql": "^16.6.0",
+            "pg": "^8.11.0",
+            "reflect-metadata": "^0.1.13",
+            "typeorm": "^0.3.16"
+      },
+      "devDependencies": {
+            "@types/bcrypt": "^5.0.0",
+            "@types/chai": "^4.3.5",
+            "@types/mocha": "^10.0.1",
+            "@types/node": "^20.3.1",
+            "mocha": "^10.2.0",
+            "ts-node": "^10.9.1",
+            "typescript": "^5.1.3"
+      }
 }
