--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
    "main": "index.ts",
    "scripts": {
       "compile": "tsc",
-      "start": "npx ts-node src/index.ts"
+      "start": "npx ts-node src/index.ts",
+      "test": "npm run test"
    },
    "keywords": [],
    "author": "",
@@ -21,7 +22,9 @@
    },
    "devDependencies": {
       "@types/bcrypt": "^5.0.0",
+      "@types/mocha": "^10.0.1",
       "@types/node": "^20.3.1",
+      "mocha": "^10.2.0",
       "ts-node": "^10.9.1",
       "typescript": "^5.1.3"
    }
