--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    "license": "ISC",
    "dependencies": {
       "@apollo/server": "^4.7.4",
+      "axios": "^1.4.0",
       "bcrypt": "^5.1.0",
       "express": "^4.18.2",
       "graphql": "^16.6.0",
