--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "experimentalDecorators": true,
       "sourceMap": true,
       "strict": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "esModuleInterop": true
    },
    "include": [
       "**/*.ts"
