--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@apollo/server": "^4.7.4",
       "axios": "^1.4.0",
       "bcrypt": "^5.1.0",
+      "chai": "^4.3.7",
       "express": "^4.18.2",
       "graphql": "^16.6.0",
       "pg": "^8.11.0",
@@ -24,6 +25,7 @@
    },
    "devDependencies": {
       "@types/bcrypt": "^5.0.0",
+      "@types/chai": "^4.3.5",
       "@types/mocha": "^10.0.1",
       "@types/node": "^20.3.1",
       "mocha": "^10.2.0",
