--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "axios": "^1.4.0",
       "bcrypt": "^5.1.0",
       "chai": "^4.3.7",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "graphql": "^16.6.0",
       "pg": "^8.11.0",
