--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "scripts": {
             "compile": "tsc",
             "start": "npx ts-node src/index.ts",
-            "test": "npm run test"
+            "test": "mocha"
       },
       "keywords": [],
       "author": "",
