--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
             "dotenv": "^16.3.1",
             "express": "^4.18.2",
             "graphql": "^16.6.0",
+            "jsonwebtoken": "^9.0.0",
             "pg": "^8.11.0",
             "reflect-metadata": "^0.1.13",
             "typeorm": "^0.3.16"
@@ -26,6 +27,7 @@
       "devDependencies": {
             "@types/bcrypt": "^5.0.0",
             "@types/chai": "^4.3.5",
+            "@types/jsonwebtoken": "^9.0.2",
             "@types/mocha": "^10.0.1",
             "@types/node": "^20.3.1",
             "mocha": "^10.2.0",
