--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
             "typeorm": "^0.3.16"
       },
       "devDependencies": {
+            "@faker-js/faker": "^8.0.2",
             "@types/bcrypt": "^5.0.0",
             "@types/chai": "^4.3.5",
             "@types/jsonwebtoken": "^9.0.2",
