--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
       "author": "",
       "license": "ISC",
       "dependencies": {
-            "@apollo/server": "^4.7.5",
+            "@apollo/server": "^4.9.0",
             "axios": "^1.4.0",
             "bcrypt": "^5.1.0",
             "chai": "^4.3.7",
+            "class-validator": "^0.14.0",
             "dotenv": "^16.3.1",
             "express": "^4.18.2",
             "graphql": "^16.7.1",
             "jsonwebtoken": "^9.0.0",
             "pg": "^8.11.0",
             "reflect-metadata": "^0.1.13",
+            "type-graphql": "^2.0.0-beta.1",
             "typeorm": "^0.3.16"
       },
       "devDependencies": {
