--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
             "pg": "^8.11.0",
             "reflect-metadata": "^0.1.13",
             "type-graphql": "^2.0.0-beta.1",
+            "typedi": "^0.10.0",
             "typeorm": "^0.3.16"
       },
       "devDependencies": {
